improved pictures of layout in the thesis

--- a/thesis.tex
+++ b/thesis.tex
@@ -23,6 +23,8 @@
 \usepackage{xcolor}
 \usepackage{array}
 \usepackage{fixltx2e}
+\usepackage{float}
+\usepackage{floatflt}
 
 \usepackage{blindtext}
 
