--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,7 @@ The actually last missing step will be the integration of the already developed 
 
 As we already have a fast and reliable placer, I have implemented the routing into this tool. The main results of this thesis are:
 \begin{itemize}
-\item I have implemented a line expansion router, which creates, in most cases, design rule clean routes and considers symmetries.
-\item Based on the previous router I have implemented an extension of the line expansion router, which tries to reduce the parasitics.
-\item As it isn't sure which one will fit best to the hierarchical placer it is easy to replace the router with a different implementation.
+\item a line expansion router, which creates, in most cases, design rule clean routes and considers symmetries
+\item based on the previous router an extended version, which tries to reduce the parasitics
+\item a software design, where the routing algorithm can be exchanged easily
 \end{itemize}
