changed plantage to Plantage

--- a/results.tex
+++ b/results.tex
@@ -16,7 +16,7 @@ To show also the results of a layout with a symmetry I have prepared one simple 
 	\label{fig:class_diagram_router}
 \end{figure}
 
-The results above show that the layouts created by plantage are at least feasible. Additionally, they also consider several constraints for analog circuits. The results are for sure not yet perfect, but this wasn't the aim of this thesis. The really main point was to implement the routing and make it easy to replace the algorithm later, as it is not sure which solution will be the best for the hierarchical placer. This can be done now easily, it is only necessary to inherit from the class Router.
+The results above show that the layouts created by Plantage are at least feasible. Additionally, they also consider several constraints for analog circuits. The results are for sure not yet perfect, but this wasn't the aim of this thesis. The really main point was to implement the routing and make it easy to replace the algorithm later, as it is not sure which solution will be the best for the hierarchical placer. This can be done now easily, it is only necessary to inherit from the class Router.
 
 \begin{samepage}
 Finally, I was able to reach all the targets claimed in the introduction:
